--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -9,11 +9,10 @@
     xmlns:common="clr-namespace:LiteTube.Common">
 
     <DataTemplate x:Key="CategoryItemTemplate">
-        <Border Width="405"
-                Height="100"
-                x:Name="Border"
-                Margin="0,0,0,10"
-                Background="{StaticResource PhoneSecondaryBackgroundBrush}">
+        <Grid Height="100"
+              x:Name="Border"
+              Margin="0,0,0,10"
+              Background="{StaticResource PhoneSecondaryBackgroundBrush}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -27,7 +26,7 @@
                             FontSize="28"
                             FontWeight="Light"
                             VerticalAlignment="Center"
-                            Margin="20"
+                            Margin="20,0,20,0"
                             Foreground="{StaticResource PhoneSubtleBrush}"/>
                 <Border Grid.Column="1"
                         Margin="0,0,20,0"
@@ -39,7 +38,7 @@
                 </Border>
 
             </Grid>
-        </Border>
+        </Grid>
     </DataTemplate>
     
     <DataTemplate x:Key="LoadingListView" >
