--- a/LiteTube/ChannelListPage.xaml
+++ b/LiteTube/ChannelListPage.xaml
@@ -30,13 +30,13 @@
 
         <TextBlock Text="{Binding Title}"
                    Grid.Row="1"
-                   Style="{StaticResource PanoramaItemHeaderTextStyle}"
-                   Margin="12,0,0,20" />
+                   Style="{StaticResource TitleTextBlockStyle}" />
 
         <ContentPresenter Grid.Row="2"
                           x:Name="ChannelList"
                           Content="{Binding}"
-                          ContentTemplate="{StaticResource CategoryLoadingListView}"/>
+                          ContentTemplate="{StaticResource CategoryLoadingListView}"
+                          Margin="-50,0,0,0"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
