--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -26,7 +26,7 @@
             <DataTemplate x:Key="MiddlePanoramaHeader">
                 <TextBlock Text="{Binding}"
                            FontSize="{StaticResource PhoneFontSizeExtraLarge}"
-                           FontFamily="{StaticResource PhoneFontFamilySemiLight}"
+                           FontFamily="{StaticResource PhoneFontFamilyLight}"
                            Foreground="{StaticResource PhoneSubtleBrush}"
                            Margin="-1,10,0,0"/>
             </DataTemplate>
