--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -80,8 +80,13 @@
                                         Grid.Column="0"
                                         Orientation="Horizontal">
                                 <ToggleButton Command="{Binding LikeCommand}"
-                                              IsChecked="{Binding IsLiked, Mode=TwoWay}">
-                                    <ContentPresenter ContentTemplate="{StaticResource LikeIcon}"/>
+                                              IsChecked="{Binding IsLiked, Mode=TwoWay}"
+                                              Style="{StaticResource AppBarToggleButtonStyle}">
+                                    <TextBlock Text="&#xe19f;"
+                                               FontFamily="Segoe UI Symbol"
+                                               Width="30"
+                                               Height="30"
+                                               FontSize="20"/>
                                 </ToggleButton>
                                 <TextBlock Text="{Binding Likes}"
                                            Style ="{StaticResource PhoneTextSmallStyle}"
@@ -92,8 +97,13 @@
                                     Grid.Column="2"
                                     Grid.Row="1" >
                                 <ToggleButton Command="{Binding LikeCommand}"
-                                              IsChecked="{Binding IsDisliked, Mode=TwoWay}">
-                                    <ContentPresenter ContentTemplate="{StaticResource DislikeIcon}"/>
+                                              IsChecked="{Binding IsDisliked, Mode=TwoWay}"
+                                              Style="{StaticResource AppBarToggleButtonStyle}">
+                                    <TextBlock Text="&#xe19e;"
+                                               FontFamily="Segoe UI Symbol"
+                                               Width="30"
+                                               Height="30"
+                                               FontSize="20"/>
                                 </ToggleButton>
                                 <TextBlock Text="{Binding Dislikes}"
                                            Style ="{StaticResource PhoneTextSmallStyle}"
@@ -116,7 +126,6 @@
                               Margin="0,12,0,0">
 
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
@@ -157,7 +166,7 @@
 
                             <Button Content="Subscribe"
                                     x:Uid="SubscribeButton"
-                                    Grid.Column="3"
+                                    Grid.Column="2"
                                     Margin="0,8,8,8"
                                     Command="{Binding SubscribeCommand}"
                                     FontSize="{StaticResource PhoneFontSizeSmall}"
